Update README.md and notebook.ipynb

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1746,7 +1746,7 @@
     "pd.DataFrame(d)\n",
     "\n",
     "my_df=pd.DataFrame(d)\n",
-    "my_df.plot(kind='bar', stacked=True, title='Test')"
+    "my_df.plot(kind='bar', stacked=True, title='Results')"
    ]
   },
   {
